# carriage

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  docs  pyproject.toml  readthedocs.yml  setup.py  underscore.py
carriage/: __init__.py  array.py  lambda_.py  map.py  monad.py  optional.py  pipeline.py  repr.py  row.py  rowtype.py  sequence.py  stream.py  streamtable.py  types.py  underscore.py
doc/: api.rst  conf.py
docs/: Makefile  api.html  array.html  genindex.html  index.html  index.rst  lambda.html  map.html  objects.inv  optional.html  row.html  search.html  searchindex.js  stream.html  streamtable.html
docs-src/: Makefile  api.rst  conf.py  index.rst  lambda.rst  map.rst  optional.rst  stream.rst
docs-src/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs-src/_build/html/: api.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs-src/_build/html/_modules/: index.html
docs-src/_build/html/_modules/carriage/: array.html  map.html  optional.html  stream.html
docs-src/_build/html/_sources/: index.rst.txt
docs/.doctrees/: api.doctree  array.doctree  environment.pickle  index.doctree  lambda.doctree  map.doctree  optional.doctree  row.doctree  stream.doctree  streamtable.doctree
docs/_modules/: index.html
docs/_modules/carriage/: array.html  lambda_.html  map.html  optional.html  row.html  stream.html  streamtable.html
docs/_sources/: api.rst.txt  array.rst.txt  index.rst.txt  optional.rst.txt  row.rst.txt  streamtable.rst.txt
docs_src/: conf.py
docs_src/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs_src/_build/html/: .buildinfo  api.html  genindex.html  objects.inv  searchindex.js
docs_src/_build/html/_modules/: index.html
docs_src/_build/html/_modules/carriage/: array.html  map.html  optional.html  stream.html
maybee/: __init__.py  maybe.py
tests/: test_array.py  test_lambda.py  test_list.py  test_maybe.py  test_maybee.py  test_optional.py  test_stream.py
