[tool.poetry]
name = "carriage"
version = "0.4.13"
description = "Enhanced collection classes for programming fluently"
authors = ["顏孜羲 <joseph.yen@gmail.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
tabulate = "^0.8.2"
pandas = {version = "^0.23.3", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest = "^3.6"
flake8 = "^3.5"
autopep8 = "^1.3"
autoflake = "^1.2"
ptipython = "^1.0"
